# qspview

./: CMakeLists.txt
src/: gui.cpp  gui.hpp  main.cpp  qsp.cpp  qsp.hpp  searchdialog.cpp  searchdialog.hpp
